--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover" style="background-color: rgb(3, 7, 18); margin: 0; padding: 0;">
+		<div style="display: contents; background-color: rgb(3, 7, 18);">%sveltekit.body%</div>
 	</body>
 </html>
